# learning

./: .gitignore  Readme.md
Languages/Rust/axum_practice/: Cargo.toml
Languages/Rust/axum_practice/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
Languages/Rust/axum_practice/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
Languages/Rust/axum_practice/tests/: quick_test.rs
Languages/Rust/learn_http/: Cargo.toml
Languages/Rust/learn_http/src/: dual_roles.rs  fd.rs  lib.rs  main.rs  mcs.rs  mesg_bndry.rs  no_partial_reads.rs  server.rs  tcp_does.rs  what_happens.rs
Languages/Rust/learn_http/src/async_server/: fu_tu_re.rs  mod.rs  tokyo.rs
Languages/Rust/learn_http/src/http_over_tcp/: http_server.rs  http_server_with_parse.rs  mod.rs
Languages/Rust/learn_http/src/hype/: hyper_http.rs  hyper_http_with_routing.rs  mod.rs
Languages/Rust/learn_http/src/websockets/: mod.rs  ws.rs  ws_client.rs
Languages/Rust/practice_axum_server/: Cargo.toml
Languages/Rust/practice_axum_server/src/: main.rs
Languages/Rust/scarff_beta/: .gitignore  Cargo.toml  justfile  rust-toolchain.toml
Languages/Rust/scarff_beta/crates/cli/: Cargo.toml
Languages/Rust/scarff_beta/crates/cli/src/: args.rs  error.rs  main.rs  output.rs
Languages/Rust/scarff_beta/crates/cli/src/commands/: mod.rs  new.rs
Languages/Rust/scarff_beta/crates/core/: Cargo.toml
Languages/Rust/scarff_beta/crates/core/pkg/sumdb/sum.golang.org/: latest
Languages/Rust/scarff_beta/crates/core/src/: errors.rs  lib.rs  plan.md
Languages/Rust/scarff_beta/crates/core/src/domain/: Untitled-1.md  common.rs  common2.rs  errors.rs  mod.rs  project_structure.rs  render_context.rs  target.rs  target_old.rs  target_v2.rs  template.rs  template2.rs  validator.rs
Languages/Rust/scarff_beta/crates/core/src/scaffold/: engine.rs  errors.rs  filesystem.rs  mod.rs  validator.rs  writer.rs
Languages/Rust/scarff_beta/crates/core/src/template/: built_in_templates.rs  errors.rs  mod.rs  renderer.rs  resolver.rs  store.rs
Languages/Rust/scarff_beta/crates/core/src/template/templates/rust_cli/: Cargo.toml.template
Languages/Rust/scarff_beta/crates/core/tests/: scaffold_projects.rs
Languages/Rust/scarff_beta/docs/: 001_idea_ts_runtime_and_compatability.md  002_target_typestate_and_buider.md  003_domain_summary.md  004_tmaplates_structure_idea.md  005_templates_structure_decision_table.md  006_future_domain_desing.md  007_cli_architectures.md
Languages/Rust/scarff_beta/docs/ADR/: 00_core_domain_target_framework_design.md  01_core_domain_target_invariants_design.md
Languages/Rust/scarff_beta/scarff-adapters/: Cargo.toml
Languages/Rust/scarff_beta/scarff-adapters/src/: builtin_templates.rs  lib.rs  template_loader.rs
Languages/Rust/scarff_beta/scarff-adapters/src/renderer/: simple.rs
Languages/Rust/scarff_beta/scarff-adapters/src/template_store/: memory.rs
Languages/Rust/scarff_beta/scarff-cli/: Cargo.toml
Languages/Rust/scarff_beta/scarff-cli/src/: error.rs  main.rs
Languages/Rust/scarff_beta/scarff-cli/src/cli/: mod.rs
Languages/Rust/scarff_beta/scarff-cli/src/commands/: init.rs  list.rs  new.rs
Languages/Rust/scarff_beta/scarff-core/: Cargo.toml
Languages/Rust/scarff_beta/scarff-core/src/application/services/: scaffold_service.rs
Languages/Rust/scarff_beta/scarff-core/src/domain/: error.rs  mod.rs  value_objects.rs
Languages/Rust/scarff_beta/scarff-core/src/domain/entities/: target.rs  template.rs
Languages/Rust/scarff_beta/templates/languages/rust/cli/hexagonal/rust_cli_clap_hexagonal_v0.1.0/: Cargo.toml.template  deny.toml.template  justfile
Languages/Rust/scarff_beta/templates/languages/rust/cli/hexagonal/rust_cli_clap_hexagonal_v0.1.0/{project_name}-adapters/: Cargo.toml.template
Languages/Rust/scarff_beta/templates/languages/rust/cli/hexagonal/rust_cli_clap_hexagonal_v0.1.0/{project_name}-cli/: Cargo.toml.template
Languages/Rust/scarff_beta/templates/languages/rust/cli/layered/rust_cli_clap_layered_v0.1.0/: Cargo.toml.template  README.md  rust-toolchain.toml.template
Languages/Rust/verb_beta/: Cargo.toml  Dockerfile  Readme.md
Languages/Rust/verb_beta/docs/: verb.md
Languages/Rust/verb_beta/src/: error.rs  errors.rs  lib.rs  main.rs  server.rs
Languages/Rust/verb_beta/src/api/: dto.rs  error.rs  mod.rs
Languages/Rust/verb_beta/src/api/handlers/: create_verb.rs  drop_verb.rs  get_logs.rs  get_verb.rs  list_verbs.rs  mod.rs  todo_hadlers.rs  update_state.rs
Languages/Rust/verb_beta/src/api/routers/: mod.rs  router_v1.rs
Languages/Rust/verb_beta/src/api/routes/: mod.rs
Languages/Rust/verb_beta/src/application/: error.rs  mod.rs
Languages/Rust/verb_beta/src/application/facade/: mod.rs  verb_facade.rs
Languages/Rust/verb_beta/src/application/use_cases/: create_verb.rs  get_logs_by_verb_id.rs  list_verbs.rs  mod.rs  transition_verb.rs
Languages/Rust/verb_beta/src/bootstrap/: mod.rs
Languages/Rust/verb_beta/src/config/: environment.rs  error.rs  mod.rs  telemetry.rs
Languages/Rust/verb_beta/src/domain/: error.rs  mod.rs
Languages/Rust/verb_beta/src/domain/model/: action_log_model.rs  mod.rs  task_model.rs  verb_model.rs
Languages/Rust/verb_beta/src/domain/repository/: action_log_repo.rs  mod.rs  verb_repo.rs
Languages/Rust/verb_beta/src/infra/: error.rs  mod.rs
Languages/Rust/verb_beta/src/infra/db/: builder.rs  database.rs  dyn_db.rs  factory.rs  memory_db.rs  mod.rs  singleton.rs
Languages/Rust/verb_beta/src/infra/repository/in_memory/: action_log_repo.rs  database.rs  mod.rs  verb_repo.rs
Languages/Rust/verb_beta/src/services/: mod.rs
Languages/Rust/verb_beta/src/services/core/: error.rs  mod.rs
Languages/Rust/verb_beta/src/services/core/infra/memory/: action_log_store.rs  mod.rs  uow.rs  verb_store.rs
Languages/Rust/verb_beta/src/services/core/model/: action.rs  action_log.rs  mod.rs  task.rs  verb.rs
Languages/Rust/verb_beta/src/services/core/store/: mod.rs  verb_store.rs
Languages/Rust/verb_beta/src/web/: mod.rs
Languages/Rust/verb_beta/src/web/handlers/: create_verb.rs  mod.rs
Languages/Rust/verb_beta/src/web/routes/: mod.rs
(+139 files in other folders)
