[package]
name = "learn_http"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
httparse = "1.10.1"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
