[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Obiechi Ebuka Samuel oesisu@outlook.com"]
repository = ""
license = ""

[workspace.dependencies]
anyhow = "1.0.101"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "v7"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"


[profile.release]
opt-level = 3
lto = "fat"       #full link time optimization for performance
codegen-units = 1 # better optimization at the cost of compile time;
panic = "abort"
