[package]
name = "verb_beta"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
# core async runtime
axum = { version = "0.8.8", features = ["macros"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
# web framework- axum with macros for routing
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
