[package]
name = "scarff-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Infrastructure adapters for Scarff (filesystem, template storage, rendering)"

[dependencies]
# Core dependency
scarff-core = { path = "../scarff-core" }

# Workspace dependencies
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# For template rendering (future)
# tera = { version = "1.19", optional = true }
# handlebars = { version = "5.0", optional = true }

[features]
default = []
# advanced-templates = ["tera", "handlebars"]

[lib]
name = "scarff_adapters"
path = "src/lib.rs"
