[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


[[bin]]
name = "scarff"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# scarff-core
scarff-core = { path = "../core" }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

# Profile for faster development iterations
[profile.dev.package."*"]
opt-level = 2
