[package]
name = "scarff-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true


[[bin]]
name = "scarff"
path = "src/main.rs"

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true


# CLI argument parsing
clap = { version = "4.5.57", features = [
  "derive",
  "cargo",
  "env",
  "unicode",
  "wrap_help",
] }

# Core library
scarff-core = { path = "../core" }

# Output formatting
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
console = "0.16.2"
indicatif = "0.18.3"
