[package]
name = "scarff-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
