[package]
name = "scarff-core-v1"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

uuid.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
